#S12P11A609-326 refactor: toList();로 다 줄였음