@@ -7,7 +7,6 @@ import com.ssafy.d3v.backend.member.repository.HistoryRepository;
 import com.ssafy.d3v.backend.member.repository.MemberRepository;
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.scheduling.annotation.Scheduled;
@@ -33,7 +32,7 @@ public class HistoryServiceImpl implements HistoryService {
                         .date(history.getDate())
                         .count(history.getCount())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
